--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,7 +3,7 @@ V6.0 (under development)
   * A larger patch from Diemtar Rösler was applied which addresses various issue regarding VCL styles (especially #478 and #491).
   * Improved support for C++ Builder  
 
-V5.5.2: (under development)
+V5.5.2: (10 Nov 2014)
   * Various improvements regarding code style
   * Implemented #471: Add emVisibleDueToExpansion and emSelected to TVTExportMode  
   * Fixed issue #488: XE7 packages should depend on one another and use suffix 21
