--- a/wiki/LatestNews.wiki
+++ b/wiki/LatestNews.wiki
@@ -1,6 +1,14 @@
 #labels Featured
 = Latest news on the Virtual Treeview Control =
 
+== 10 Nov 2014: Release of V5.5.2 ==
+List of changes: (*[https://www.jam-software.de/customers/downloadTrial.php?article_no=407&language=EN Download]*)
+  * Various improvements regarding code style
+  * Implemented #471: Added emVisibleDueToExpansion and emSelected to TVTExportMode  
+  * Fixed issue #488: XE7 packages should depend on one another and use suffix 21
+  * Fixed issue #462: Undo r636, make VirtualTreesD require VirtualTreesR again
+  * Fixed issue #489 XE2 compiler switch error
+
 == 05 Nov 2014: Two Branches for older and newer Delphi versions ==
 
 Some of you may have read [http://blog.kassebaum.eu/?p=379 this blog post] on Roman's page. I do agree with many parts of the blog post. Supporting old Delphi versions that I do not have installed is time consuming. And not being able to use new language features that I use throughout my own projects was a pity. This is why I discussed with some of the remaining Virtual Treeview developers earlier this year to limit the support to newer Delphi versions (e.g. Delphi 2010 and higher) and make a branch for the older version within the SVN repository. Then this new development came up.
@@ -15,7 +23,7 @@ _Joachim_
 
 
 == 13 Oct 2014: Release of V5.5.1 ==
-List of changes: (*[https://www.jam-software.de/customers/downloadTrial.php?article_no=407&language=EN Download]*)
+List of changes:
   * Fixed issue #479: The style hooks for the VCL styles are now registered for TVirtualStringTree and TVirtualDrawTree instead of TBaseVirtualTree, which makes it easier to use own style hooks in derived classes.  
   * Partial fix for issue #478: The standard VCL property StyleElemets (public in TControl in RAD Studio XE3 and higher) is now supported and published for TVirtualStringTree and TVirtualDrawTree (XE3 and higher). This means you can define if the font and the backgrounbd color is taken from the VCL style or the control's properties. Leaving out seBorder is not yet working well, more work will be necessary.
   *  Fixed issue #473: Return type of GetUtilityImages should be TCustomImageList
