--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,6 @@
 V6.0 (under development)
+  * 
+  * Issue #519: Changed plus/minus buttons so that hot tracking of the buttons is always on, independent of toHotTrack.
   * Issue #514: The splitter area in the column header should be configurable
   * Issue #515: The value for Indent should get scaled too if the toAutoScale flag is set
   * Issue #511: From the unit VirtualTres new units have been extracted to reduce its size.
@@ -7,6 +9,13 @@ V6.0 (under development)
     function GetNodeData<T>(pNode: PVirtualNode): T;
     function GetNodeDataAt<T:class>(pXCoord: Integer; pYCoord: Integer): T;
     function GetFirstSelectedNodeData<T>(): T; overload;
+    function GetInterfaceFromNodeData<T:IInterface>(pNode: PVirtualNode): T; 
+    procedure SetNodeData(pNode: PVirtualNode; pUserData: Pointer); 
+    procedure SetNodeData(pNode: PVirtualNode; const pUserData: IInterface); 
+    procedure SetNodeData<T:class>(pNode: PVirtualNode; pUserData: T);
+    Similar functions have also been added to the TVirtualNode record.
+  * The grid demo of the "Advanced" project now uses a class instead of a record and the new generic functions from issue #502.
+  * Issue #362: InternalConnectNode: AdjustTotalHeight not called if Node not FullyVisible
   * Issue #506: Autosort is being triggered at design-time.
   * Issue #486: AutoScroll is performed although toAutoScroll is not set.
   * DoMeasureItem() now ensures that the node was initialized.
