--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,11 +1,20 @@
 V6.1 (beta)
+ * Implemented Issue #530: Removed all AnsiString code from export routines. Breaking changes:
+   - TCustomVirtualStringTree.ContentToText() is now based on (Unicode)string and no longer on AnsiString.
+   - TCustomVirtualStringTree.ContentToUnicode() is now deprecated, use ContentToText() instead.
+ * Implemented issue #536: Add export event that is triggered for each cell
+   - Added new event OnGetCellText which has new TVSTGetCellTextEventArgs record as parameter.
+     This event could supersede the OnGetText event in a future version.
+   - All export formats now also export static text, in case the toShowStaticText flag is set  
+ * Fixed issue #545: VCL Themes: Background of scrollbars is erased with wrong color
+ * Fixed issue #487: When OnAddToSelection is called, GetFirstSelected returns nil
  * Fixed issue #542: AllocateInternalDataArea() was broken for derived classes
-   This was a result of issue #507. Now the user node data come before the internal data.
-   Therefore it is important to use the function InternalData() to access the internla data of a node.  
+   This was a result of issue #507. Now the user node data comes before the internal data.
+   Therefore it is important to use the function InternalData() to access the internal data of a node.  
  * Fixed issue #541: Duplicate call of EndEdit()
  * Fixed issue #123: Triangle button is not shown for hot node
  * Fixed issue #347: With VCL-Themes: No expand-pluses seen under Windows classic theme
- * Fixed copy&paste error related to issue #519
+ * Fixed copy&paste error is source code related to issue #519
 
 V6.0 (13 Apr 2015)
   * Issue #509: Added new option hoAutoColumnPopupMenu to TVTHeaderOption. 
