--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-V6.1 (beta)
+V6.1 (02 June 2015)
  * Implemented Issue #530: Removed all AnsiString code from export routines. Breaking changes:
    - TCustomVirtualStringTree.ContentToText() is now based on (Unicode)string and no longer on AnsiString.
    - TCustomVirtualStringTree.ContentToUnicode() is now deprecated, use ContentToText() instead.
