--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,10 @@
-﻿V6.2.2 (20 Jan 2016)
+V6.2.3 (11 Feb 2016)
+  * Fixed accidental remove of vsReleaseCallOnUserDataRequired flag which can cause mem leaks.
+  * TVirtualNode.SetData() now sets the vsOnFreeNodeCallRequired flag for all types of user data and so is consisted with other SetData / GetData methods.
+  * TCustomVirtualStringTree.SetChildCount() now calls ResetInternalData()= with Recurse = False to avoid that all siblings of the new children are reseted recursively. See isuue #576
+  * TCustomVirtualStringTree.ResetInternalData() now respects the Recursive parameter
+  
+V6.2.2 (20 Jan 2016)
   * Issue #603: If the node already has children, then its nodeheight is valid and we must not remove its total height, but rather its height
   * Fixed issue #599: Possible infinite loop in GetPreviousVisibleNoInit()
   * Added new method TBaseVirtualTree.InitRecursive() as workaround for issue #597: Initializes a node and optionally its children up to a certain level.
