Added recent chnages

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+V6.4: (under developement)
+  *  Fixed #627: It should be possible to use OnGetImageIndexEx without having imagelists assigned.
+  *  Added assertion that verifies if an imageindex is supplied but no valid imagelist is available for this imageindex.   
+  *  Fixed #148: Background Images now support other formats than just bitmaps.
+  *  Fixed #623: GetHint calculates wrong width for HintText    
+    
 V6.3: (17 May 2016)
   * Added support for RAD Studio 10.1 Berlin
   * Implemented #607: Disabled checkbox images should be available 
