Fixed issue #544: Header painting problem with BiDiMode right to left * The stop condition variable MaxX was not offset correctly as per BidiMode. Problem recreated by a test project and tested the fix. * This also fixes issue #427. Problem recreated by changing BidiMode of Advanced Demo--Grid to right to left and tested the fix.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,10 @@
-V6.4: (under developement)
+﻿V6.4: (under developement)
   *  Fixed #627: It should be possible to use OnGetImageIndexEx without having imagelists assigned.
   *  Added assertion that verifies if an imageindex is supplied but no valid imagelist is available for this imageindex.   
   *  Fixed #148: Background Images now support other formats than just bitmaps.
-  *  Fixed #623: GetHint calculates wrong width for HintText    
+  *  Fixed #623: GetHint calculates wrong width for HintText   
+  *  Fixed #633: High dpi scaling was performed two times    
+  *  Fixed #544, #427: Header painting problem with BiDiMode right to left  
     
 V6.3: (17 May 2016)
   * Added support for RAD Studio 10.1 Berlin
