Enhancement #662: Background image now supports transparency * Image types: BMP, PNG, GIF, ICO, EMF, TIFF and WMF are automatically identified to support transparent background * Also detects certain third party image classes registered for PNG, GIF and other image types so that the transparency related code is used for them. See the code in the procedure SetBackground. * If some other third party image class is registered that is not detected, set the flag BackgroundTransparentExternalType explicitly in order to properly do transparent painting.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+V6.5: (under development)
+  * Enhancement #662: Background image now supports transparency
+
 V6.4.1: (26 Oct 2016)
   * Fixed #549: Drawing issue with toCheckSupport an toExtendedFocus
   * Fixed #663: Exception pressing return on an edited item with no columns)
