Fixed issue #289: HintMode hmHintAndDefault: Default Hint does not change to node specific hint when the mouse is moved to a node. If the default hint is shown and you move over a node the node specific hint is not shown till you leave the control and come back. * The fix involved modifying the CursorRect in the above HintMode.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,6 @@
-V6.5: (under development)
+﻿V6.5: (under development)
   * Enhancement #662: Background image now supports transparency
+  * Fixed #289: HintMode hmHintAndDefault: Default Hint does not change to node specific hint when the mouse is moved to a node.
 
 V6.4.1: (26 Oct 2016)
   * Fixed #549: Drawing issue with toCheckSupport an toExtendedFocus
